<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/textViewfuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome_do_funcionario"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_digite_o_nome_do_funcionario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_salario_bruto"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextSalarioBruto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_digite_o_sal_rio_bruto"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_descontos_inss_ir_entre_outros"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextDescontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_digite_o_valor_total_dos_descontos"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_beneficios_vale_transporte_vale_alimenta_o_plano_de_sa_de_entre_outros"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextBeneficios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_digite_o_valor_total_dos_beneficios"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_calcular_salario_liquido" />

    <TextView
        android:id="@+id/textViewSalarioLiquido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="20sp" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_voltar" />/>

</LinearLayout>
