<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/fc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_name_isabela_souza"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/fc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_name_pedro_guilherme"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/fc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_name_gabriel_barbosa"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/fc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_name_ana_luiza"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_voltar" />/>
</LinearLayout>