<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/menu"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu"
        android:textSize="30sp" />

    <Button
        android:id="@+id/AssistenteDeHoras"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="90dp"
        android:layout_width="261dp"
        android:layout_height="90dp"
        android:text="@string/txt_assistente_de_horas" />

    <Button
        android:id="@+id/EmissorDeHolarites"
        android:layout_gravity="center"
        android:layout_width="258dp"
        android:layout_height="79dp"
        android:text="@string/txt_emissor_de_holarites"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="287dp" />

    <Button
        android:id="@+id/suporte"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="380dp"
        android:layout_width="258dp"
        android:layout_height="79dp"
        android:text="@string/txt_suporte_tecnico" />

    <Button
        android:id="@+id/voltar"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="468dp"
        android:layout_width="258dp"
        android:layout_height="79dp"
        android:text="@string/txt_voltar" />
</LinearLayout>